--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -93,6 +93,7 @@ prometheus_process_exporter_version: 0.4.2
 grafana_operator_version: "4.4.12"
 grafana_image_version: 11.1.1
 prometheus_pvc_size: 50Gi
+prometheus_scrape_interval: 5m
 prometheus_retention_period: 10d
 
 
