--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -78,3 +78,11 @@ metadata:
 spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/vault-config:v0.1.0-pr56-14780365601 #${ARGOCD_ENV_crossplane_packages_vault_config_version}
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: sc-mysqlcluster
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/sc-mysqlcluster:v0.1.0-pr43-14663050115
+  skipDependencyResolution: true
