fix: pxc op helm chart

--- a/gitops/argo-apps/base/percona-operator.yaml
+++ b/gitops/argo-apps/base/percona-operator.yaml
@@ -36,3 +36,9 @@ spec:
       helm:
         valuesObject:
           watchAllNamespaces: true
+    - chart: pxc-operator
+      repoURL: https://percona.github.io/percona-helm-charts/
+      targetRevision: "1.17.0"
+      helm:
+        valuesObject:
+          watchAllNamespaces: true
