--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -21,8 +21,7 @@ prometheus:
   resourcesPreset: ${ARGOCD_ENV_resources_preset_bitnami}
   remoteWrite:
     - name: central-monitoring
-      # url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
-      url: ""
+      url: http://central-monitoring-grafana-mimir-gateway/api/v1/push
       headers:
         X-Scope-OrgID: ${ARGOCD_ENV_remote_write_tenant_id}
   remoteRead:
