feat: add percon helm charts

--- a/gitops/argo-apps/base/percona-operator.yaml
+++ b/gitops/argo-apps/base/percona-operator.yaml
@@ -32,13 +32,19 @@ spec:
   sources:
     - chart: pg-operator
       repoURL: https://percona.github.io/percona-helm-charts/
-      targetRevision: ${ARGOCD_ENV_utils_percona_helm_version}
+      targetRevision: ${ARGOCD_ENV_utils_pg_operator_helm_version}
       helm:
         valuesObject:
           watchAllNamespaces: true
     - chart: pxc-operator
       repoURL: https://percona.github.io/percona-helm-charts/
-      targetRevision: "1.17.0"
+      targetRevision: {ARGOCD_ENV_utils_pxc_operator_helm_version}
+      helm:
+        valuesObject:
+          watchAllNamespaces: true
+    - chart: psmdb-operator
+      repoURL: https://percona.github.io/percona-helm-charts/
+      targetRevision: {ARGOCD_ENV_utils_psmdb_operator_helm_version}
       helm:
         valuesObject:
           watchAllNamespaces: true
