--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -43,6 +43,11 @@ netbird_db_preferred_backup_window: "07:00-09:00"
 netbird_db_preferred_maintenance_window: "Mon:00:00-Mon:01:00"
 #end db settings
 
+# percona operator helm chart versions
+pg_operator_helm_version: "2.6.0"
+pxc_operator_helm_version: "1.17.0"
+psmdb_operator_helm_version: "1.19.1"
+
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
 cert_manager_helm_version: "1.17.1"
