enable configuring prometheus scrap interval in env

--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -41,6 +41,7 @@ loki_ingester_replication_factor: "3"
 loki_distributor_replica_count: "2"
 loki_ingester_replica_count: "3" # loki_ingester_replica_count should be >= loki_ingester_replication_factor
 loki_querier_replica_count: "2"
+prometheus_scrape_interval: 5m
 prometheus_retention_period: 10d
 tempo_retention_period: 72h
 istio_egress_gateway_max_replicas: 5
