--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -155,7 +155,7 @@ spec:
         # percona operator
 
         - name: utils_percona_helm_version
-          value: "${ARGOCD_ENV_utils_percona_helm_version}"
+          value: "${ARGOCD_ENV_utils_pg_operator_helm_version"
 
         - name: utils_percona_namespace
           value: "${ARGOCD_ENV_utils_percona_namespace}"
