--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -56,7 +56,13 @@ spec:
 
         - name: "utils_capi_capi_crossplane_helm_providerconfig_name"
           value: "${ARGOCD_ENV_utils_capi_capi_crossplane_helm_providerconfig_name}"
-
+        # ArgoCD
+        - name: "utils_argocd_helm_app_name"
+          value: ${ARGOCD_ENV_utils_argocd_helm_app_name}
+        - name: "utils_argocd_helm_namespace"
+          value: ${ARGOCD_ENV_utils_argocd_helm_namespace}
+        - name: "utils_argocd_helm_helm_version"
+          value: ${ARGOCD_ENV_utils_argocd_helm_helm_version}
         # rook
         - name: "utils_capi_capi_rook_ceph_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
