Fix missing var

--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -58,9 +58,11 @@ spec:
           value: "${ARGOCD_ENV_utils_capi_capi_crossplane_helm_providerconfig_name}"
         # ArgoCD
         - name: "utils_argocd_helm_app_name"
-          value: ${ARGOCD_ENV_utils_argocd_helm_app_name}
+          value: "argocd"
+
         - name: "utils_argocd_helm_namespace"
           value: ${ARGOCD_ENV_utils_argocd_helm_namespace}
+
         - name: "utils_argocd_helm_helm_version"
           value: ${ARGOCD_ENV_utils_argocd_helm_helm_version}
         # rook
