Enable pg_autoscaler mgr module

--- a/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
@@ -17,6 +17,10 @@ cephClusterSpec:
         enabled: false
       compression:
         enabled: false
+  mgr:
+    modules:
+      - name: pg_autoscaler
+        enabled: true
 
 resources:
   storage:
