--- a/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
+++ b/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
@@ -1,14 +1,16 @@
 cluster:
   name: ${ARGOCD_ENV_netbird_operator_cluster_name}
-  dns:
 ingress:
   enabled: true
   router:
     enabled: true
   kubernetesAPI:
-    enabled: true
-    groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
-    resourceName: "${ARGOCD_ENV_netbird_operator_cluster_name}-kube-api"
+    enabled: false
 netbirdAPI:
   keyFromSecret: ${ARGOCD_ENV_netbird_operator_api_key_secret}
 managementURL: ${ARGOCD_ENV_netbird_operator_management_url}
+operator:
+  podSecurityContext:
+    sysctls:
+      - name: net.ipv4.ip_forward
+        value: "1"
