--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -52,7 +52,7 @@ crossplane_providers_terraform_version: "0.16.0"
 crossplane_providers_ansible_version: "0.6.0"
 crossplane_providers_k8s_version: "0.11.4"
 crossplane_providers_helm_version: "0.20.4"
-crossplane_providers_netbird_version: "0.0.15"
+crossplane_providers_netbird_version: "0.0.16"
 crossplane_providers_aws_version: "0.49.2"
 crossplane_providers_aws_s3_version: "1.21.0"
 crossplane_providers_aws_iam_version: "1.21.0"
@@ -66,8 +66,8 @@ crossplane_packages_objectstores_version: "v0.1.0-pr17-14513539141"
 crossplane_packages_utils_version: "v0.3.0"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
-crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14653912830"
-crossplane_packages_nb_config_version: "v0.1.0-pr37-14652832123"
+crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14759345539"
+crossplane_packages_nb_config_version: "v0.1.0-pr37-14759345539"
 crossplane_packages_docdb_version: "v12-14219020439-1"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
@@ -322,6 +322,7 @@ capi_cluster_network_gateway: "10.10.127.1"
 capi_cluster_proxmox_host_vlan: "'127'"
 sc_metallb_ip_range_begin: "10.10.127.10"
 sc_metallb_ip_range_end: "10.10.127.20"
+capi_cluster_cidr: "10.10.127/24"
 ##end capi
 
 # env_common_platform db settings
