--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-operator/nbopbootstrap-claim.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-operator/nbopbootstrap-claim.yaml
@@ -12,7 +12,7 @@ spec:
     groupNames:
       admin: ${ARGOCD_ENV_netbird_rbac_admin_group}
       externalAccess: ${ARGOCD_ENV_netbird_rbac_user_group}
-      kubeapiResourceGroup: sc-k8s
+      networkResourceGroup: ${ARGOCD_ENV_netbird_operator_network_resource_group}
     serviceUserName: sc-service-user
     accessTokenExpiresInDays: 5
     accessToken:
