--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -64,4 +64,5 @@ crossplane_functions_patch_and_transform_version: "0.8.2"
 crossplane_functions_go_templating_version: "0.8.0"
 crossplane_functions_kcl_version: "0.11.3"
 crossplane_functions_auto_ready_version: "0.4.2"
+crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_utils_version: "v0.3.0-pr48-14533733180"
