feat: vault-post-config, gitlab-post-config and percona update

--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -68,5 +68,13 @@ kind: Configuration
 metadata:
   name: gitlab
 spec:
-  package: ghcr.io/mojaloop/iac-crossplane-packages/gitlab:v0.1.0-pr49-14777129955 #${ARGOCD_ENV_crossplane_packages_gitlab_version}
+  package: ghcr.io/mojaloop/iac-crossplane-packages/gitlab:${ARGOCD_ENV_crossplane_packages_gitlab_version}
+  skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: vault-config
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/vault-config:${ARGOCD_ENV_crossplane_packages_vault_config_version}
   skipDependencyResolution: true
