--- a/gitops/applications/base/vault-post-config/vault-provider-config.yaml
+++ b/gitops/applications/base/vault-post-config/vault-provider-config.yaml
@@ -2,6 +2,8 @@ apiVersion: vault.upbound.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: vault-provider
+  annotations:
+    argocd.argoproj.io/sync-wave: 5
 spec:
   address: "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
   credentials:
