--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -73,8 +73,9 @@ crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_functions_extra_resources_version: "0.0.3"
 crossplane_packages_objectstores_version: "v0.1.0"
 crossplane_packages_utils_version: "v0.3.0"
-crossplane_packages_gitlab_version: "v0.1.0-pr49-14714394364"
-crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
+crossplane_packages_gitlab_version: "v0.1.0"
+crossplane_packages_vault_config_version: "v0.1.0-pr56-14778621124"
+crossplane_packages_sc_postgres_version: "v0.1.0-pr43-14776773275"
 crossplane_packages_sc_bootstrap_version: "v0.1.0"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14402159611"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
