--- a/gitops/argo-apps/base/crossplane-packages.yaml
+++ b/gitops/argo-apps/base/crossplane-packages.yaml
@@ -61,3 +61,6 @@ spec:
 
         - name: "crossplane_packages_gitlab_version"
           value: "${ARGOCD_ENV_utils_crossplane_packages_gitlab_version}"
+
+        - name: "crossplane_packages_vault_config_version"
+          value: "${ARGOCD_ENV_utils_crossplane_packages_vault_config_version}"
