--- a/gitops/applications/base/vault-post-config/kustomization.yaml
+++ b/gitops/applications/base/vault-post-config/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - external-secretstore.yaml
-#  - vault-provider-config.yaml
-  - vault-post-config.yaml
+  - vault-provider-config.yaml
+#  - vault-post-config.yaml
