add kyverno policy

--- a/gitops/applications/base/netbird-operator/kustomization.yaml
+++ b/gitops/applications/base/netbird-operator/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - namespace.yaml
   - nbopbootstrap-claim.yaml
   - nboppost-claim.yaml
+  - kyverno-policy.yaml
 helmCharts:
   - name: kubernetes-operator
     releaseName: ${ARGOCD_ENV_netbird_operator_app_name}
