fix: add dns zone id

--- a/terraform/ccnew/default-config/private-cloud-vars.yaml
+++ b/terraform/ccnew/default-config/private-cloud-vars.yaml
@@ -13,6 +13,7 @@ egress_gateway_cidr: 10.10.100.0/24
 bastion_public_ips: ["publicip"]
 private_subdomain: ""
 public_subdomain: "dev1.devbaremetal.infitx-labs.com"
+private_dns_zone_id: ""
 int_interop_switch_subdomain: intapi
 ext_interop_switch_subdomain: extapi
 target_group_internal_https_port: 31443
