--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/storage/sync-secrets-cm.yaml
@@ -4,6 +4,8 @@ kind: ObjectSyncer
 metadata:
   name: rook-external-config
   namespace:  ${ARGOCD_ENV_storage_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: -100
 spec:
   parameters:
     objectType: Secret
@@ -24,6 +26,8 @@ kind: ObjectSyncer
 metadata:
   name: external-cluster-user-command
   namespace: ${ARGOCD_ENV_storage_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: -100
 spec:
   parameters:
     objectType: ConfigMap
@@ -44,6 +48,8 @@ kind: ObjectSyncer
 metadata:
   name: rook-ceph-mon-endpoints-external
   namespace: ${ARGOCD_ENV_storage_namespace}
+  annotations:
+    argocd.argoproj.io/sync-wave: -100
 spec:
   parameters:
     objectType: ConfigMap
