fix: change in password key

--- a/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/db-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/deploy-env-onboard/db-secrets.yaml
@@ -64,7 +64,7 @@ spec:
   output:
     name: ${ARGOCD_ENV_db_secret}
     stringData:
-      password: "{{ .dynamicsecret_db_password.password }}"
+      root: "{{ .dynamicsecret_db_password.password }}"
     type: Opaque
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
